Tweak PermGen for tests